# ScreamingGoose

./: CMakeLists.txt  CmakeLists.txt  changelog.txt
src/: app.cpp  app.hpp  assets.cpp  assets.hpp  button.cpp  button.hpp  death_scene.cpp  death_scene.hpp  game_scene.cpp  game_scene.hpp  main.cpp  menu_scene.cpp  menu_scene.hpp  pipe.cpp  pipe.hpp  player.cpp  player.hpp  scene.hpp  splash_scene.cpp  splash_scene.hpp
src/scenes/: death_scene.cpp  game_scene.cpp  menu_scene.cpp  splash_scene.cpp
src/scenes/include/: death_scene.hpp  game_scene.hpp  menu_scene.hpp  scene.hpp  splash_scene.hpp
